corrected images src

--- a/HTML/3.1_refactor_with_divs_FWP/3.1_refactor_with_divs_FWP.html
+++ b/HTML/3.1_refactor_with_divs_FWP/3.1_refactor_with_divs_FWP.html
@@ -13,7 +13,7 @@
   <div id="job" class="job">
     <h2>I am a Programmer</h2>
   </div>
-  <img src="images/picture.jpg" alt="My Picture" width="200">
+  <img src="./picture.jpg" alt="My Picture" width="200">
   <div id="about-me" class="about-me">
     <p>I enjoy coding, watching stuff about it and learrning new things. <br>
       I also play video games on my free time. <br>
