--- a/CSS/6.2_refactor_with_float_FWP/6.2_refactor_with_float_FWP.html
+++ b/CSS/6.2_refactor_with_float_FWP/6.2_refactor_with_float_FWP.html
@@ -57,7 +57,7 @@
     <div id="job" class="text">
       <h2>I am a Programmer</h2>
     </div>
-    <img src="/HTML/images/picture.jpg" alt="My Picture" width="200" class="text">
+    <img src="./picture.jpg" alt="My Picture" width="200" class="text">
     <div id="about-me" class="about-me">
       <p>I enjoy coding, watching stuff about it and learrning new things. <br>
         I also play video games on my free time. <br>
