--- a/HTML/1.1_markup/1.1_markup.html
+++ b/HTML/1.1_markup/1.1_markup.html
@@ -24,7 +24,7 @@
     <br>
     <a href="https://www.youtube.com/" target="_blank">youtube</a><br>
     <br>
-    <img src="/HTML/1.1_markup/nature.jpg" alt="forest and river - local image">
+    <img src="./nature.jpg" alt="forest and river - local image">
     <br>
     <br>
     <br>
