--- a/HTML/1.4_first_web_page/1.4_first_web_page.html
+++ b/HTML/1.4_first_web_page/1.4_first_web_page.html
@@ -9,7 +9,7 @@
 <body>
   <h1><em>Hi there my name is, </em>Ammar</h1>
   <h2>I am a Programmer</h2>
-  <img src="/HTML/1.4_first_web_page/picture.jpg" alt="My Picture" width="200">
+  <img src="./picture.jpg" alt="My Picture" width="200">
   <p>I enjoy coding, watching stuff about it and learrning new things. <br>
     I also play video games on my free time. <br>
     In addition I enjoy watching computers and technology stuff like CPUs, GPUs, RAMs, Softwares etc.
