added 7.1_refactor file and modified 6.2

--- a/CSS/7.2_refactor_navbar_buttons_FWP/7.2_refactor_navbar_buttons_FWP.html
+++ b/CSS/7.2_refactor_navbar_buttons_FWP/7.2_refactor_navbar_buttons_FWP.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Combo">
-  <title>6.2_refactor_with_float_FWP</title>
+  <title>7.2_refactor_navbar_buttons_FWP</title>
   <style>
     * {
       box-sizing: border-box;
@@ -28,7 +27,6 @@
       color: rgb(194, 255, 255);
       font-family: Combo, serif;
     }
-    
     a {
       color: black;
     }
@@ -44,14 +42,14 @@
       padding: 10px;
     }
 
-    .follow {
+    .h4 {
       padding-left: 35%;
       text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+    <div class="container">
     <div id="welcome" class="text">
       <h1><em>Hi there my name is, </em>Ammar</h1>
     </div>
@@ -65,7 +63,7 @@
         In addition I enjoy watching computers and technology stuff like CPUs, GPUs, RAMs, Softwares, Operating Systems etc.
       </p>
     </div>
-    <div class="follow">Follow me</div>
+    <div class="h4">Follow me</div>
     <div class="socials">
       <a href="#">Github</a>
       <br>
