--- a/CSS/6.2_refactor_with_float_FWP/6.2_refactor_with_float_FWP.html
+++ b/CSS/6.2_refactor_with_float_FWP/6.2_refactor_with_float_FWP.html
@@ -28,7 +28,7 @@
       color: rgb(194, 255, 255);
       font-family: Combo, serif;
     }
-    
+
     a {
       color: black;
     }
@@ -47,6 +47,7 @@
     .follow {
       padding-left: 35%;
       text-align: center;
+      padding-bottom: 10px;
     }
   </style>
 </head>
