--- a/CSS/7.2_refactor_navbar_buttons_FWP/7.2_refactor_navbar_buttons_FWP.html
+++ b/CSS/7.2_refactor_navbar_buttons_FWP/7.2_refactor_navbar_buttons_FWP.html
@@ -27,6 +27,7 @@
       color: rgb(194, 255, 255);
       font-family: Combo, serif;
     }
+    
     a {
       color: black;
     }
@@ -42,14 +43,14 @@
       padding: 10px;
     }
 
-    .h4 {
-      padding-left: 35%;
+    .follow {
       text-align: center;
+      padding-bottom: 10px;
     }
   </style>
 </head>
 <body>
-    <div class="container">
+  <div class="container">
     <div id="welcome" class="text">
       <h1><em>Hi there my name is, </em>Ammar</h1>
     </div>
@@ -63,7 +64,7 @@
         In addition I enjoy watching computers and technology stuff like CPUs, GPUs, RAMs, Softwares, Operating Systems etc.
       </p>
     </div>
-    <div class="h4">Follow me</div>
+    <div class="follow">Follow me</div>
     <div class="socials">
       <a href="#">Github</a>
       <br>
