some changes to 7.2_reactor

--- a/CSS/7.2_refactor_navbar_buttons_FWP/7.2_refactor_navbar_buttons_FWP.html
+++ b/CSS/7.2_refactor_navbar_buttons_FWP/7.2_refactor_navbar_buttons_FWP.html
@@ -14,10 +14,11 @@
 
     .container {
       margin: auto;
-      max-width: 70%;
+      max-width: 100%;
       padding-left: 25%;
       padding-right: 25%;
       text-align: center;
+      /* border: red solid 1px; */
     }
 
     body {
@@ -34,13 +35,20 @@
 
     .text {
       padding-top: 10px;
-      padding-bottom: 10px;
+      padding-bottom: 20px;
+    }
+
+    .picture {
+      margin-left: 300px;
     }
 
     .about-me {
       float: right;
       width: 35%;
+      margin-top: 30px;
+      margin-right: 250px;
       padding: 10px;
+      /* border: red solid 1px; */
     }
 
     .follow {
@@ -50,6 +58,9 @@
   </style>
 </head>
 <body>
+  <nav>
+
+  </nav>
   <div class="container">
     <div id="welcome" class="text">
       <h1><em>Hi there my name is, </em>Ammar</h1>
@@ -57,7 +68,7 @@
     <div id="job" class="text">
       <h2>I am a Programmer</h2>
     </div>
-    <img src="./picture.jpg" alt="My Picture" width="200" class="text">
+    <img src="./picture.jpg" alt="My Picture" width="200" class="picture">
     <div id="about-me" class="about-me">
       <p>I enjoy coding, watching stuff about it and learrning new things. <br>
         I also play video games on my free time. <br>
