--- a/CSS/8.2_positioning/8.2_positioning.html
+++ b/CSS/8.2_positioning/8.2_positioning.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>8.1_positioning</title>
+  <title>8.2_positioning</title>
   <style>
     #outer {
-      /* the problem with the intial code is that the outer div should have position:relative and the inner dive position:absolute */
-      /* so that means we are moving the inner div relative to the outer div */
-      /* the solution is to add position:relative in the outer div style */
-      position: relative;
-      /* ---------------------------------------------------------------- */
       width: 100px;
       height: 100px;
       background: darkcyan;
       margin: 50px;
+    }
+
+    #middle{
+      position: relative;
+      background-color: red;
+      margin-bottom: 5px;
     }
 
     #inner {
@@ -25,12 +26,14 @@
       position: absolute;
       top: 10px;
     }
-
   </style>
 </head>
 <body>
   <div id="outer">
-    <div id="inner"></div>
+    <div id="middle">
+      Box titles
+      <div id="inner"></div>
     </div>
+  </div>
 </body>
 </html>
