--- a/CSS/9.1_responsive_text/9.1_responsive_text.html
+++ b/CSS/9.1_responsive_text/9.1_responsive_text.html
@@ -6,10 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>9.1_responsive_text</title>
   <style>
-    
+    section {
+      text-align: center;
+      padding-top: 0.5rem;
+    }
+
+    /* smartphone */
+    @media (max-width: 468px){
+      section h3 {
+        font-size: 1.5rem;
+      }
+
+      section p {
+        font-size: 1rem;
+      }
+    }
+
+    /* tablet */
+    @media (max-width: 785px) and (min-width: 469px){
+      section h3 {
+        font-size: 2rem;
+      }
+
+      section p {
+        font-size: 1.5rem;
+      }
+    }
+
+    /* normal screen */
+    @media (max-width: 1000px) and (min-width: 786px){
+      section h3 {
+        font-size: 2.5rem;
+      }
+
+      section p {
+        font-size: 2rem;
+      }
+    }
+
+    /* wide screen */
+    @media (min-width: 1001px){
+      section h3 {
+        font-size: 2.5rem;
+      }
+
+      section p {
+        font-size: 2rem;
+      }
+    }
   </style>
 </head>
 <body>
-  
+  <section>
+    <h3>About</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident nostrum, corporis dicta minima possimus fuga nam quis perspiciatis.
+      Aspernatur pariatur, recusandae molestiae libero asperiores est voluptates esse saepe aliquam quidem.
+    </p>
+  </section>
 </body>
 </html>
