--- a/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
+++ b/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
@@ -5,6 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>9.4_refactor_responsive_FWB</title>
+  <style>
+    .clr {
+      clear: both;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      background: url('https://wallpapercave.com/uwp/uwp105758.png') no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    }
+  </style>
 </head>
 <body>
   
