--- a/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
+++ b/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
@@ -20,9 +20,92 @@
       -o-background-size: cover;
       background-size: cover;
     }
+
+    body {
+      color: rgb(194, 255, 255);
+    }
+
+    header {
+      text-align: center;
+      margin-top: 15px;
+      margin-bottom: 100px;
+      position: sticky;
+      top: 0;
+    }
+
+    header a {
+      text-decoration: none;
+      color: aqua;
+      padding: 10px;
+      font-size: 20px;
+    }
+
+    header a:hover {
+      color: aquamarine;
+    }
+
+    .hi {
+      text-align: center;
+    }
+
+    .hi h2 {
+      font-size: 40px;
+      margin-bottom: 50px;
+    }
+
+    .hi h3 {
+      font-size: 30px;
+      margin-bottom: 40px;
+    }
+
+    .myimg {
+      width: 200px;
+      text-align: center;
+    }
+
+    .about {
+      text-align: center;
+      color: black;
+      font-weight: bold;
+    }
+
+    .follow-me {
+      color: black;
+      text-align: center;
+      margin-top: 20px;
+    }
+
+    .follow-me a {
+      text-decoration: none;
+      color:blue;
+    }
   </style>
 </head>
 <body>
-  
+  <header>
+    <a href="#">Home</a>
+    <a href="#">Socials</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </header>
+  <div class="hi">
+    <h2>Hi there my name is, Ammar</h2>
+    <h3>I am a Programmer</h3>
+  </div>
+  <div style="text-align: center; margin-bottom: 40px;">
+    <img src="./picture.jpg" alt="My picture" class="myimg">
+  </div>
+  <div class="about">
+    <p>
+      I enjoy coding, watching stuff about it and learrning new things. <br>
+      I also play video games on my free time. <br>
+      In addition I enjoy watching computers and technology stuff like CPUs, GPUs, RAMs, Softwares, Operating Systems etc. <br>
+    </p>
+  </div>
+  <div class="follow-me">
+    Follow Me On <br>
+    <a href="#">Github</a> <br>
+    <a href="#">Linkden</a>
+  </div>
 </body>
 </html>
