--- a/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
+++ b/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
@@ -79,6 +79,11 @@
       text-decoration: none;
       color:blue;
     }
+
+    .follow-me a:hover {
+      color: aqua;
+    }
+
   </style>
 </head>
 <body>
