nav bar attempt

--- a/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
+++ b/CSS/9.4_refactor_responsive_FWB/9.4_refactor_responsive_FWB.html
@@ -10,6 +10,10 @@
       clear: both;
     }
 
+    .hidden-header {
+      display: none;
+    }
+
     * {
       box-sizing: border-box;
       margin: 0;
@@ -84,6 +88,36 @@
       color: aqua;
     }
 
+    /* navigation bar attempt - didn't work will do it later */
+    /* @media (max-width:312px) {
+      header {
+        display: none;
+      }
+
+      .nav-menu-img {
+        width: 40px;
+      }
+
+      .hidden-header {
+        display: block;
+        margin-top: 15px;
+        margin-bottom: 10px;
+        position: sticky;
+        top: 0;
+      }
+
+      .hidden-header a {
+        text-decoration: none;
+        color: aqua;
+        font-size: 20px;
+      }
+
+      .hidden-header a:hover {
+        color: aquamarine;
+      }
+    } */
+    /* ----------------------------------------------------- */
+
   </style>
 </head>
 <body>
@@ -93,6 +127,12 @@
     <a href="#">About</a>
     <a href="#">Contact</a>
   </header>
+  <!-- navigation bar attempt -->
+  <!-- <div class="hidden-header">
+    <img src="https://www.clipartmax.com/png/middle/36-365828_navbar-toggle-icon-menu-hamburger-png-white.png" alt="nav-menu" class="nav-menu-img">
+    <a href="#">Menu</a>
+  </div> -->
+  <!-- ---------------------- -->
   <div class="hi">
     <h2>Hi there my name is, Ammar</h2>
     <h3>I am a Programmer</h3>
