--- a/CSS/10.1_responsive_typography/10.1_responsive_typography.html
+++ b/CSS/10.1_responsive_typography/10.1_responsive_typography.html
@@ -5,8 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>10.1_responsive_typography</title>
+  <style>
+    body {
+     font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
+    }
+  </style>
 </head>
 <body>
-  
+  <div>
+    <h3>Title</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet esse, aspernatur dolorem repellat iusto hic! Mollitia dolorum sint fugit possimus deserunt, quas ipsam quam quod. Blanditiis qui eaque corrupti repellat.
+    </p>
+  </div>
 </body>
 </html>
