--- a/CSS/11.2_Flex_Basics_2/11.2_Flex_Basics_2.html
+++ b/CSS/11.2_Flex_Basics_2/11.2_Flex_Basics_2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>11.1_flex_basics_1</title>
+  <title>11.2_Flex_Basics_2</title>
   <style>
     .container {
       margin: auto;
@@ -12,7 +12,8 @@
       height: 50vh;
       width: 50%;
       background: burlywood;
-      justify-content: space-between;
+      justify-content: center;
+      align-items: center;
     }
 
     .box {
