--- a/CSS/12-Advanced Selectors/12.3_pseudo_box_color_animate/12.3_pseudo_box_color_animate.html
+++ b/CSS/12-Advanced Selectors/12.3_pseudo_box_color_animate/12.3_pseudo_box_color_animate.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>12.2-pseudo_box_color</title>
+  <title>12.3_pseudo_box_color_animate</title>
   <style>
     .box {
-      background-color: red;
+      background-color: blue;
       width: 200px;
       height: 200px;
       position: relative;
@@ -18,6 +18,10 @@
       position: absolute;
       width: 50%;
       height: 100%;
+      background-color: red;
+    }
+
+    .box:hover::after {
       background-color: purple;
     }
   </style>
