--- a/CSS/14-Animations/14.1_simple_transition/14.1_simple_transition.html
+++ b/CSS/14-Animations/14.1_simple_transition/14.1_simple_transition.html
@@ -18,6 +18,7 @@
       width: 200px;
       height: 200px;
       position: relative;
+      overflow: hidden;
     }
 
     .box::after {
@@ -26,11 +27,12 @@
       position: absolute;
       width: 100%;
       height: 100%;
+      transform: translateX(-200px);
+      transition: all 1.5s ease-in-out;
     }
 
     .box:hover::after {
-      transition: all 1.5s ease-in-out;
-      width: 0;
+      transform: translateX(0);
     }
   </style>
 </head>
